# ReconX-Framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  __main__.py  install.ps1  install.sh  pyproject.toml  recon.py  requirements.txt
.github/workflows/: ci.yml
config/: default_wordlist.txt
tests/: test_utils.py
